--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "animejs": "^3.2.1",
     "express": "^4.18.2",
-    "sass": "^1.62.0"
+    "sass": "^1.62.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.3",
