--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "study web app",
   "scripts": {
     "start": "node server.js",
+    "build": "parcel build public/index.html",
     "prestart": "parcel build public/index.html",
     "dev": "parcel serve public/index.html"
   },
-  "author": "",
+  "author": "Lfor8727",
   "license": "ISC",
   "dependencies": {
     "animejs": "^3.2.1",
